--- a/index.html
+++ b/index.html
@@ -6389,6 +6389,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       color: #7bd88f;
+      text-align: center;
     }
 
     .app-header__subtitle {
