--- a/index.html
+++ b/index.html
@@ -314,6 +314,306 @@
       filter: saturate(0.85);
     }
 
+    .schedule-card {
+      padding: 1.35rem;
+      display: grid;
+      gap: 1.1rem;
+    }
+
+    .schedule-card__header {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+      justify-content: space-between;
+      gap: 0.75rem;
+    }
+
+    .schedule-card__meta {
+      font-size: 0.75rem;
+      text-transform: uppercase;
+      letter-spacing: 0.16em;
+      color: rgba(148, 163, 184, 0.7);
+      font-weight: 600;
+    }
+
+    .schedule-card__title {
+      margin: 0;
+      font-size: 1.35rem;
+      letter-spacing: -0.01em;
+    }
+
+    .schedule-card__today {
+      background: rgba(125, 216, 143, 0.18);
+      border: 1px solid rgba(125, 216, 143, 0.4);
+      color: #bbf7d0;
+      padding: 0.45rem 0.95rem;
+      border-radius: 999px;
+      font-size: 0.85rem;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
+    }
+
+    .schedule-card__today:hover {
+      background: rgba(125, 216, 143, 0.28);
+      border-color: rgba(125, 216, 143, 0.6);
+      transform: translateY(-1px);
+    }
+
+    .schedule-grid {
+      display: grid;
+      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-template-rows: repeat(2, minmax(96px, auto));
+      gap: 0.7rem;
+      width: 100%;
+    }
+
+    .schedule-grid__cell {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 0.45rem;
+      justify-content: flex-start;
+      align-items: flex-start;
+      padding: 0.8rem 0.9rem 0.85rem;
+      border-radius: 14px;
+      border: 1px solid rgba(148, 163, 184, 0.28);
+      background: rgba(15, 23, 42, 0.68);
+      color: inherit;
+      text-align: left;
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, transform 160ms ease;
+    }
+
+    .schedule-grid__cell:hover,
+    .schedule-grid__cell:focus-visible {
+      border-color: rgba(125, 216, 143, 0.6);
+      background: rgba(21, 30, 46, 0.88);
+    }
+
+    .schedule-grid__cell:focus-visible {
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(45, 212, 195, 0.45);
+    }
+
+    .schedule-grid__cell--active {
+      border-color: rgba(45, 212, 195, 0.65);
+      background: rgba(34, 197, 194, 0.18);
+      box-shadow: 0 18px 30px rgba(15, 23, 42, 0.45);
+    }
+
+    .schedule-grid__dayname {
+      font-size: 0.85rem;
+      font-weight: 600;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      color: rgba(148, 163, 184, 0.95);
+    }
+
+    .schedule-grid__slot-label {
+      font-size: 0.7rem;
+      letter-spacing: 0.12em;
+      text-transform: uppercase;
+      color: rgba(148, 163, 184, 0.7);
+    }
+
+    .schedule-grid__label {
+      font-size: 0.95rem;
+      font-weight: 600;
+      line-height: 1.35;
+    }
+
+    .schedule-grid__time {
+      font-size: 0.85rem;
+      color: var(--text-secondary);
+    }
+
+    .schedule-grid__resident {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      font-size: 0.8rem;
+      color: var(--text-secondary);
+    }
+
+    .schedule-grid__resident-badge {
+      display: grid;
+      place-items: center;
+      width: 1.5rem;
+      height: 1.5rem;
+      border-radius: 999px;
+      background: rgba(148, 163, 184, 0.22);
+      color: rgba(226, 232, 240, 0.92);
+      font-size: 0.9rem;
+      transition: background 160ms ease, color 160ms ease;
+    }
+
+    .schedule-grid__resident-badge--present {
+      background: rgba(125, 216, 143, 0.4);
+      color: #052e16;
+    }
+
+    .schedule-day-view {
+      border-radius: 18px;
+      border: 1px solid rgba(148, 163, 184, 0.28);
+      background: rgba(10, 16, 24, 0.78);
+      padding: 1.05rem 1.2rem;
+      display: grid;
+      gap: 0.95rem;
+    }
+
+    .schedule-day-view__header {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: baseline;
+      justify-content: space-between;
+      gap: 0.65rem;
+    }
+
+    .schedule-day-view__title {
+      margin: 0;
+      font-size: 1.15rem;
+      letter-spacing: -0.01em;
+    }
+
+    .schedule-day-view__meta {
+      font-size: 0.85rem;
+      color: var(--text-secondary);
+    }
+
+    .schedule-day-view__blocks {
+      display: grid;
+      gap: 0.8rem;
+    }
+
+    .schedule-day-view__block {
+      border-radius: 16px;
+      border: 1px solid rgba(148, 163, 184, 0.22);
+      background: rgba(15, 23, 42, 0.65);
+      padding: 0.95rem;
+      display: grid;
+      gap: 0.65rem;
+    }
+
+    .schedule-day-view__block-head {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0.5rem;
+    }
+
+    .schedule-day-view__block-title {
+      margin: 0;
+      font-size: 1rem;
+      font-weight: 600;
+    }
+
+    .schedule-day-view__block-time {
+      font-size: 0.85rem;
+      color: var(--text-secondary);
+    }
+
+    .schedule-day-view__location {
+      font-size: 0.8rem;
+      color: rgba(148, 163, 184, 0.7);
+    }
+
+    .schedule-day-view__patients {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: grid;
+      gap: 0.55rem;
+    }
+
+    .schedule-day-view__patient {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 0.75rem;
+      padding: 0.6rem 0.75rem;
+      border-radius: 12px;
+      background: rgba(10, 15, 25, 0.65);
+      border: 1px solid rgba(148, 163, 184, 0.18);
+    }
+
+    .schedule-day-view__patient-details {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
+    }
+
+    .schedule-day-view__patient-time {
+      font-weight: 600;
+      font-size: 0.95rem;
+    }
+
+    .schedule-day-view__patient-id {
+      font-size: 0.8rem;
+      color: var(--text-secondary);
+    }
+
+    .schedule-resident-toggle {
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      background: rgba(15, 23, 42, 0.8);
+      color: rgba(226, 232, 240, 0.92);
+      padding: 0.35rem 0.55rem;
+      border-radius: 999px;
+      font-size: 0.85rem;
+      min-width: 2.2rem;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.35rem;
+      cursor: pointer;
+      transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
+    }
+
+    .schedule-resident-toggle:hover {
+      background: rgba(34, 197, 194, 0.22);
+      border-color: rgba(34, 197, 194, 0.5);
+      transform: translateY(-1px);
+    }
+
+    .schedule-resident-toggle[aria-pressed="true"] {
+      background: rgba(125, 216, 143, 0.35);
+      border-color: rgba(125, 216, 143, 0.65);
+      color: #052e16;
+    }
+
+    .schedule-day-view__empty {
+      margin: 0;
+      font-size: 0.85rem;
+      color: var(--text-secondary);
+    }
+
+    @media (max-width: 1200px) {
+      .schedule-grid {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+      }
+    }
+
+    @media (max-width: 860px) {
+      .schedule-grid {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+    }
+
+    @media (max-width: 560px) {
+      .schedule-card {
+        padding: 1.15rem;
+      }
+
+      .schedule-grid {
+        grid-template-columns: minmax(0, 1fr);
+      }
+
+      .schedule-grid__cell {
+        min-height: 100px;
+      }
+    }
+
     .card.collapsed .card-body,
     .card.collapsed .card-sticky-actions,
     .card.collapsed .next-best-results,
@@ -6868,6 +7168,31 @@ body.all-tasks-overlay-active {
           </button>
         </div>
       </header>
+      <section class="card schedule-card" id="weeklyScheduleCard" aria-label="Weekly clinic schedule">
+        <div class="schedule-card__header">
+          <div>
+            <span class="schedule-card__meta">Clinic map</span>
+            <h2 class="schedule-card__title">Daily Schedule</h2>
+          </div>
+          <button class="schedule-card__today" type="button" data-schedule-today>
+            Jump to today
+          </button>
+        </div>
+        <div
+          class="schedule-grid"
+          id="weeklyScheduleGrid"
+          data-schedule-grid
+          role="grid"
+          aria-label="Weekday clinic schedule"
+        ></div>
+        <div class="schedule-day-view" id="scheduleDayView" data-schedule-day-view hidden>
+          <div class="schedule-day-view__header">
+            <h3 class="schedule-day-view__title" data-schedule-day-title></h3>
+            <p class="schedule-day-view__meta" data-schedule-day-summary></p>
+          </div>
+          <div class="schedule-day-view__blocks" data-schedule-day-blocks></div>
+        </div>
+      </section>
   </section>
 <!-- Legacy header block replaced by .focus-command-deck -->
 <!--
@@ -8265,6 +8590,7 @@ body.all-tasks-overlay-active {
     </a>
   </nav>
 
+  <script type="module" src="./scheduleCard.js"></script>
   <script>
   const $ = id => document.getElementById(id);
 
