Fix All Tasks overlay trigger binding

--- a/index.html
+++ b/index.html
@@ -19493,20 +19493,30 @@ initializeFocusFabLongPress();
     }
     // Select elements
 const overlay = document.querySelector('.all-tasks-overlay');
-const openBtn = document.querySelector('#openAllTasks'); // your "All Tasks" button
+const openBtn = document.querySelector('#openAllTasksButton'); // your "All Tasks" button
 const closeBtn = document.querySelector('.all-tasks-overlay__close');
 
-// Open overlay
-openBtn.addEventListener('click', () => {
-  overlay.removeAttribute('hidden');                 // make it visible
-  document.body.classList.add('all-tasks-overlay-active'); // lock background scroll
-});
+if (!openBtn) {
+  console.warn('All Tasks trigger button not found; overlay will remain hidden.');
+} else if (!overlay) {
+  console.warn('All Tasks overlay element not found; cannot bind overlay interactions.');
+} else {
+  // Open overlay
+  openBtn.addEventListener('click', () => {
+    overlay.removeAttribute('hidden'); // make it visible
+    document.body.classList.add('all-tasks-overlay-active'); // lock background scroll
+  });
 
-// Close overlay
-closeBtn.addEventListener('click', () => {
-  overlay.setAttribute('hidden', '');                // hide overlay
-  document.body.classList.remove('all-tasks-overlay-active'); // restore scroll
-});
+  // Close overlay
+  if (!closeBtn) {
+    console.warn('All Tasks overlay close button not found; overlay cannot be dismissed.');
+  } else {
+    closeBtn.addEventListener('click', () => {
+      overlay.setAttribute('hidden', ''); // hide overlay
+      document.body.classList.remove('all-tasks-overlay-active'); // restore scroll
+    });
+  }
+}
   });
     </script>
 </body>
