--- a/index.html
+++ b/index.html
@@ -360,111 +360,114 @@
       transform: translateY(-1px);
     }
 
+    .schedule-card__grid-wrapper {
+      width: 100%;
+    }
+
     .weekly-grid {
       display: grid;
       grid-template-columns: repeat(5, minmax(0, 1fr));
-      grid-template-rows: repeat(2, minmax(120px, auto));
-      gap: 0.75rem;
+      grid-template-rows: repeat(2, minmax(104px, 1fr));
       width: 100%;
-      min-width: max(100%, 940px);
-      padding: 0.25rem 0.35rem 0.35rem;
-      border-radius: 20px;
-      background: linear-gradient(180deg, rgba(12, 18, 27, 0.92), rgba(10, 15, 22, 0.88));
-      box-shadow: inset 0 0 0 1px rgba(148, 163, 184, 0.08);
-    }
-
-    .weekly-grid__corner {
-      display: block;
-      border-bottom: 1px solid rgba(148, 163, 184, 0.16);
-      border-right: 1px solid rgba(148, 163, 184, 0.16);
-      border-bottom-right-radius: 12px;
-    }
-
-    .weekly-grid__day-header {
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-      padding-bottom: 0.4rem;
-      font-size: 0.85rem;
-      font-weight: 600;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      color: rgba(203, 213, 225, 0.78);
-      border-bottom: 1px solid rgba(148, 163, 184, 0.22);
+      border-radius: 18px;
+      background: linear-gradient(180deg, rgba(12, 18, 27, 0.94), rgba(9, 13, 20, 0.92));
+      border: 1px solid rgba(148, 163, 184, 0.28);
+      box-shadow: inset 0 0 0 1px rgba(15, 23, 42, 0.45);
+      overflow: hidden;
     }
 
     .weekly-grid__cell {
-      position: relative;
       display: grid;
-      grid-template-rows: auto auto 1fr;
+      grid-template-rows: auto auto auto 1fr;
+      align-content: start;
       gap: 0.35rem;
-      padding: 0.9rem 1rem;
-      border-radius: 14px;
-      border: 1px solid rgba(148, 163, 184, 0.22);
-      background: rgba(13, 20, 30, 0.82);
+      padding: 0.9rem 0.7rem 0.75rem;
+      background: rgba(15, 21, 30, 0.92);
       color: inherit;
       text-align: left;
       cursor: pointer;
-      transition: border-color 160ms ease, background 160ms ease, transform 160ms ease, box-shadow 160ms ease;
+      border-right: 1px solid rgba(148, 163, 184, 0.22);
+      border-bottom: 1px solid rgba(148, 163, 184, 0.18);
+      transition: background 150ms ease, color 150ms ease;
+      min-height: 104px;
+    }
+
+    .weekly-grid__cell:nth-child(5n) {
+      border-right: none;
+    }
+
+    .weekly-grid__cell:nth-last-child(-n + 5) {
+      border-bottom: none;
+    }
+
+    .weekly-grid__cell--pm {
+      border-bottom: none;
+    }
+
+    .weekly-grid__day {
+      font-size: 0.7rem;
+      font-weight: 600;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: rgba(203, 213, 225, 0.76);
     }
 
     .weekly-grid__cell:hover,
     .weekly-grid__cell:focus-visible {
-      border-color: rgba(45, 212, 195, 0.65);
-      background: rgba(21, 32, 44, 0.9);
+      background: rgba(23, 33, 46, 0.95);
+      color: #f8fafc;
     }
 
     .weekly-grid__cell:focus-visible {
       outline: none;
-      box-shadow: 0 0 0 3px rgba(45, 212, 195, 0.4), 0 8px 24px rgba(2, 12, 20, 0.45);
-    }
-
-    .weekly-grid__day {
-      font-size: 0.75rem;
-      font-weight: 600;
-      letter-spacing: 0.16em;
-      text-transform: uppercase;
-      color: rgba(148, 163, 184, 0.85);
+      box-shadow: inset 0 0 0 2px rgba(45, 212, 195, 0.4);
     }
 
     .weekly-grid__session {
-      font-size: 0.85rem;
-      color: rgba(148, 163, 184, 0.75);
+      font-size: 0.68rem;
+      letter-spacing: 0.2em;
+      text-transform: uppercase;
+      color: rgba(203, 213, 225, 0.68);
     }
 
     .weekly-grid__clinic {
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       font-weight: 600;
-      line-height: 1.4;
+      letter-spacing: 0.01em;
       color: rgba(226, 232, 240, 0.94);
+      text-transform: uppercase;
     }
 
     .weekly-grid__time {
-      font-size: 0.85rem;
-      color: var(--text-secondary);
+      font-size: 0.75rem;
+      color: rgba(148, 163, 184, 0.8);
+      letter-spacing: 0.05em;
     }
 
     .weekly-grid__indicator {
-      position: absolute;
-      top: 0.85rem;
-      right: 0.85rem;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 1.65rem;
-      height: 1.65rem;
-      border-radius: 999px;
-      background: rgba(125, 216, 143, 0.18);
-      color: rgba(190, 242, 100, 0.98);
+      margin-top: auto;
       font-size: 1rem;
       opacity: 0;
-      transform: scale(0.9);
-      transition: opacity 120ms ease, transform 120ms ease;
+      transition: opacity 160ms ease;
     }
 
     .weekly-grid__indicator--visible {
       opacity: 1;
-      transform: scale(1);
+    }
+
+    @media (max-width: 600px) {
+      .weekly-grid__cell {
+        min-height: 92px;
+        padding: 0.75rem 0.6rem 0.65rem;
+      }
+
+      .weekly-grid__clinic {
+        font-size: 0.85rem;
+      }
+
+      .weekly-grid__time {
+        font-size: 0.7rem;
+      }
     }
 
     .day-overlay {
@@ -7216,15 +7219,8 @@ body.all-tasks-overlay-active {
           ></div>
         </div>
         <p class="schedule-card__grid-hint" aria-hidden="true">
-          Swipe sideways to see all five days.
+          Tap any slot to edit the clinic details.
         </p>
-        <div
-          class="weekly-grid"
-          id="weeklyScheduleGrid"
-          data-weekly-grid
-          role="grid"
-          aria-label="Weekday clinic schedule"
-        ></div>
         <div
           class="day-overlay"
           data-day-overlay
