--- a/index.html
+++ b/index.html
@@ -322,11 +322,13 @@
     }
 
     .schedule-card__header {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: baseline;
-      justify-content: space-between;
-      gap: 0.75rem;
+  padding-inline: 1rem;      /* match the grid wrapper */
+  box-sizing: border-box;
+}
+@media (max-width: 560px) {
+  .schedule-card__header {
+    padding-inline: 0.75rem;
+
     }
 
     .schedule-card__meta {
