--- a/index.html
+++ b/index.html
@@ -322,45 +322,25 @@
     }
 
     .schedule-card__header {
-  padding-inline: 1rem;      /* match the grid wrapper */
-  box-sizing: border-box;
-}
-@media (max-width: 560px) {
-  .schedule-card__header {
-    padding-inline: 0.75rem;
-
+      padding-inline: 1rem;
+      box-sizing: border-box;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .schedule-card__meta {
-      font-size: 0.75rem;
-      text-transform: uppercase;
-      letter-spacing: 0.16em;
-      color: rgba(148, 163, 184, 0.7);
-      font-weight: 600;
+    @media (max-width: 560px) {
+      .schedule-card__header {
+        padding-inline: 0.75rem;
+      }
     }
 
     .schedule-card__title {
       margin: 0;
       font-size: 1.35rem;
       letter-spacing: -0.01em;
-    }
-
-    .schedule-card__today {
-      background: rgba(125, 216, 143, 0.18);
-      border: 1px solid rgba(125, 216, 143, 0.4);
-      color: #bbf7d0;
-      padding: 0.45rem 0.95rem;
-      border-radius: 999px;
-      font-size: 0.85rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: background 160ms ease, border-color 160ms ease, transform 160ms ease;
-    }
-
-    .schedule-card__today:hover {
-      background: rgba(125, 216, 143, 0.28);
-      border-color: rgba(125, 216, 143, 0.6);
-      transform: translateY(-1px);
+      color: #7bd88f;
+      text-align: center;
     }
 
     .schedule-card__grid-wrapper {
@@ -369,7 +349,7 @@
 
     .weekly-grid {
       display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
+      grid-template-columns: repeat(var(--weekly-grid-columns, 5), minmax(0, 1fr));
       grid-template-rows: repeat(2, minmax(104px, 1fr));
       width: 100%;
       border-radius: 18px;
@@ -380,10 +360,10 @@
     }
 
     .weekly-grid__cell {
-      display: grid;
-      grid-template-rows: auto auto auto 1fr;
-      align-content: start;
-      gap: 0.35rem;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      gap: 0.65rem;
       padding: 0.9rem 0.7rem 0.75rem;
       background: rgba(15, 21, 30, 0.92);
       color: inherit;
@@ -426,25 +406,54 @@
       box-shadow: inset 0 0 0 2px rgba(45, 212, 195, 0.4);
     }
 
-    .weekly-grid__session {
-      font-size: 0.68rem;
-      letter-spacing: 0.2em;
+    .weekly-grid__header {
+      font-size: 0.85rem;
+      font-weight: 700;
+      letter-spacing: 0.12em;
       text-transform: uppercase;
-      color: rgba(203, 213, 225, 0.68);
+      color: rgba(203, 213, 225, 0.9);
+      align-self: flex-start;
     }
 
-    .weekly-grid__clinic {
+    .weekly-grid__clinic-wrapper {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .weekly-grid__clinic-select {
+      appearance: none;
+      background: rgba(23, 32, 44, 0.88);
+      border: 1px solid rgba(148, 163, 184, 0.35);
+      border-radius: 12px;
+      color: rgba(226, 232, 240, 0.96);
       font-size: 0.9rem;
       font-weight: 600;
       letter-spacing: 0.01em;
-      color: rgba(226, 232, 240, 0.94);
+      padding: 0.6rem 2.25rem 0.6rem 0.9rem;
+      text-align: center;
       text-transform: uppercase;
+      min-width: 220px;
+      max-width: 100%;
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, color 160ms ease;
+    }
+
+    .weekly-grid__clinic-select:hover,
+    .weekly-grid__clinic-select:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(31, 45, 62, 0.95);
+      outline: none;
     }
 
     .weekly-grid__time {
       font-size: 0.75rem;
       color: rgba(148, 163, 184, 0.8);
       letter-spacing: 0.05em;
+      text-align: center;
+      margin-top: auto;
     }
 
     .weekly-grid__indicator {
@@ -452,10 +461,24 @@
       font-size: 1rem;
       opacity: 0;
       transition: opacity 160ms ease;
+      align-self: center;
     }
 
     .weekly-grid__indicator--visible {
       opacity: 1;
+    }
+
+    .weekly-grid--single-day {
+      --weekly-grid-columns: 1;
+      grid-template-rows: repeat(2, minmax(120px, 1fr));
+    }
+
+    .weekly-grid--single-day .weekly-grid__cell {
+      border-right: none;
+    }
+
+    .weekly-grid--single-day .weekly-grid__cell:first-child {
+      border-bottom: 1px solid rgba(148, 163, 184, 0.18);
     }
 
     @media (max-width: 600px) {
@@ -464,8 +487,9 @@
         padding: 0.75rem 0.6rem 0.65rem;
       }
 
-      .weekly-grid__clinic {
+      .weekly-grid__clinic-select {
         font-size: 0.85rem;
+        min-width: 0;
       }
 
       .weekly-grid__time {
@@ -602,8 +626,40 @@
       opacity: 1;
     }
 
-    .day-overlay__confirm {
+    .day-overlay__actions {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.75rem;
+      justify-content: flex-end;
       margin-top: 0.5rem;
+    }
+
+    .day-overlay__add-patient {
+      padding: 0.65rem 1rem;
+      border-radius: 12px;
+      font-weight: 600;
+      font-size: 0.9rem;
+      background: rgba(15, 23, 42, 0.85);
+      border: 1px solid rgba(148, 163, 184, 0.4);
+      color: rgba(226, 232, 240, 0.92);
+      cursor: pointer;
+      transition: border-color 160ms ease, background 160ms ease, transform 160ms ease;
+    }
+
+    .day-overlay__add-patient:hover,
+    .day-overlay__add-patient:focus-visible {
+      border-color: rgba(45, 212, 195, 0.6);
+      background: rgba(23, 34, 48, 0.9);
+      outline: none;
+      transform: translateY(-1px);
+    }
+
+    .day-overlay__add-patient:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+
+    .day-overlay__confirm {
       padding: 0.75rem 1rem;
       border-radius: 12px;
       font-weight: 600;
@@ -7829,13 +7885,7 @@ body.all-tasks-overlay-active {
   </section>
         <section class="card schedule-card" id="weeklyScheduleCard" aria-label="Weekly clinic schedule">
           <div class="schedule-card__header">
-            <div>
-              <span class="schedule-card__meta">Clinic map</span>
-              <h2 class="schedule-card__title">Daily Schedule</h2>
-            </div>
-            <button class="schedule-card__today" type="button" data-schedule-today>
-              Jump to today
-            </button>
+            <h2 class="schedule-card__title">Care I will Provide Today</h2>
           </div>
           <div class="schedule-card__grid-wrapper">
             <div
@@ -7868,9 +7918,14 @@ body.all-tasks-overlay-active {
                 <p class="day-overlay__subtitle" data-day-overlay-subtitle></p>
               </header>
               <div class="day-overlay__slots" data-day-overlay-slots></div>
-              <button type="button" class="day-overlay__confirm" data-day-overlay-confirm>
-                Confirm Patients
-              </button>
+              <div class="day-overlay__actions">
+                <button type="button" class="day-overlay__add-patient" data-day-overlay-add-patient>
+                  + Add patient
+                </button>
+                <button type="button" class="day-overlay__confirm" data-day-overlay-confirm>
+                  Confirm Patients
+                </button>
+              </div>
             </div>
           </div>
         </section>
